--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -45,7 +45,7 @@
             </intent-filter>
         </receiver>
 
-        <activity
+        <!-- <activity
             android:name=".dirac.DiracActivity"
             android:label="@string/dirac_title">
             <intent-filter>
@@ -68,7 +68,7 @@
             </intent-filter>
             <meta-data android:name="android.service.quicksettings.TOGGLEABLE_TILE"
             android:value="true" />
-        </service>
+        </service> -->
 
         <activity
             android:name=".doze.DozeSettingsActivity"
@@ -138,3 +138,4 @@
 
     </application>
 </manifest>
+
